@@ -7,9 +7,12 @@ APP_OPTS="-d64 \
           -server \
           -XX:MaxGCPauseMillis=400 \
           -XX:+UseStringDeduplication \
-          -Xmx1024m \
           -XX:+UseG1GC \
           -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 \
+          -XX:+UnlockExperimentalVMOptions \
+          -XX:+UseCGroupMemoryLimitForHeap \
+          -XX:MaxRAMFraction=1 \
+          -XshowSettings \
           -Dcom.sun.management.jmxremote.port=${JMX_PORT} \
           -Dcom.sun.management.jmxremote.ssl=false \
           -Dcom.sun.management.jmxremote.authenticate=false \
